debian-keyring (2015.03.xx) UNRELEASED; urgency=medium

  * Replace 0x54F52A8713AB03A7 with 0xED630BD2FFA943F1 (Benjamin Mesing)
    (RT #5755)
  * Add new DD key 0x590AE197EF123736 (Juliane Friederike Holzt)  (RT
    #5743)
  * Replace 0x83FD1C4682D138E0 with 0x1302F1F036EBEB19 (Tobias
    Quathamer) (RT #5752)
  * Replace 0x726C2995383F25B5 with 0x8B49BB0F0F945FC8 (Jonathan J.
    Hall) (RT #5754)
  * Replace 0x8E055F139B726B71 with 0x5B93015BFA2720F8 (Stefan Hornburg)
    (RT #5750)

 -- Gunnar Wolf <gwolf@debian.org>  Wed, 18 Mar 2015 17:16:26 +0000

debian-keyring (2015.03.04) unstable; urgency=medium

  [ Gunnar Wolf ]
  * Patch to allow reproducible builds (Closes: #777310)
  * Replace 0x813FE83A74974824 with 0x387706A26998E5C4 (Xavier Luthi)
    (RT #5722)
  * Replace 0x4E1875709D309C3B with 0x631DE7553BE8AFD4 (Robert Luberda)
    (RT #5637)
  * Add new DD key 0xF04CEFF6016CFFD0 (Jonas Genannt) (RT #5723)
  * Add new DD key 0x6F31BC44F5177DAA (Federico Ceratto) (RT #5724)
  * Replace 0xC26C97906D4FC66F with 0xD0E94F8D882D4468 (Nicolas Boullis)
    (RT #5728)
  * Replace 0x431A3CEDA2D7D292 with 0x3EBD44903EDB0496 (Sebastien
    Bacher) (RT #5685)
  * Replace 0xBACE15D2A57498FF with 0xC92949B8A63BB098 (intrigeri) (RT
    #5730)
  * Replace 0xBAC78EE5DBA50595 with 0x72AF46E6E541A5A2 (Behan Webster)
    (RT #5657)
  * Replace 0x96DD4846A3D2357B with 0x3884437B13D8FF8B (Martin Bagge)
    (RT #5732)

  [ Jonathan McDowell ]
  * Add new DM key 0x50D52F12CE4E1399 (Olof Johansson) (RT #5733)
  * Add new DM key 0x96EDAB9B2E6B7171 (Chelamattath Balasankar) (RT #5736)
  * Add new DM key 0xD113FCAC3C4E599F (Nikolaus Rath) (RT #5737)
  * Replace 0x7C64D4A494D68544 with 0x636DB5A1D91860FD (Anuradha Weeraman)
    (RT #5731)
  * Import changes sent to keyring.debian.org HKP interface:
    * 0x00018C22381A7594 Sébastien Villemot <sebastien> sig:16
    * 0x00806F2BD729A457 Jelmer Vernooij <jelmer> sub:2 sig:41
    * 0x04AAE5B397F1AAAC Ulrich Dangel <uli> sig:3